# cpp_learn

./: .gitignore  01_cin_get.cpp  03_using_namespace.cpp  04_climits.cpp  05_exceed.cpp  09_bondini.cpp  11_fltadd.cpp  13_assign.cpp  14_typecast.cpp  18_instr2.cpp  22_strtype.cpp  CMakeLists.txt  README.md
chapter_1-4/: 07_hxoct2.cpp  10_floatnum.cpp  12_devide.cpp  19_instr3.cpp  20_numstr.cpp  21_strtype1.cpp  34_strtype4.cpp  36_assgn_st.cpp  41_use_new.cpp  42_arraynew.cpp  44_ptrstr.cpp  45_newstrct.cpp  46_delete.cpp  48_choices.cpp
chapter_2/: 2_1_myfirst.cpp  2_3_getinfo.cpp  2_4_sqrt.cpp  2_5_ourfunc.cpp  2_6_convert.cpp
chapter_3/: 3_10_arith.cpp  3_11_divide.cpp  3_12_modulus.cpp  3_13_assign.cpp  3_1_limits.cpp  3_3_hxoct.cpp  3_5_chartype.cpp  3_6_morechar.cpp
chapter_4/: 4_11_structur.cpp  4_13_arrstruc.cpp  4_14_address.cpp  4_15_pointer.cpp  4_16_init_ptr.cpp  4_19_addpntrs.cpp  4_1_arraryone.cpp  4_23_mintypes.cpp  4_2_strings.cpp  4_3_instr1.cpp  4_9_strtype3.cpp
chapter_5/: 5_10_equal.cpp  5_11_compstr1.cpp  5_12_compstr2.cpp  5_13_while.cpp  5_14_wating.cpp  5_15_dowhile.cpp  5_16_textin1.cpp  5_17_textin2.cpp  5_18_textin3.cpp  5_19_textin4.cpp  5_20_nested.cpp  5_2_num_test.cpp  5_3_express.cpp  5_4_formore.cpp  5_5_bigstep.cpp  5_6_forstr1.cpp  5_7_plus_one.cpp  5_8_block.cpp  5_9_forstr2.cpp
chapter_6/: 6_10_switch.cpp  6_11_enum.cpp  6_12_jump.cpp  6_13_cinfish.cpp  6_14_cingolf.cpp  6_15_outfile.cpp  6_16_sumafile.cpp  6_1_if.cpp  6_2_ifelse.cpp  6_3_ifelseif.cpp  6_4_or.cpp  6_5_and.cpp  6_6_more_and.cpp  6_7_not.cpp  6_8_cctypes.cpp  (+1 more)
(+34 files in other folders)
